# Nucleus

./: .gitignore  README.md  capacitor.config.json  index.html  keystore.properties  nucleus-release.jks  package-lock.json  package.json  run-migration.mjs  vite.config.ts
%USERPROFILE%/.tauri/: nucleus.key  nucleus.key.pub
.github/workflows/: keep-alive.yml  release-desktop.yml
android/: .gitignore  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle  google-services.json
public/: manifest.webmanifest
scratch_rust_wnf/: Cargo.toml
scratch_rust_wnf/src/: main.rs
scripts/: gen-notify-sound.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  win_helper.cs
src/components/: AmountInput.tsx  AssistantChat.tsx  AssistantWidget.tsx  BackupReminder.tsx  Combobox.tsx  ConfirmDialog.tsx  CryptoFutures.tsx  CryptoHistory.tsx  CryptoOverview.tsx  CryptoPortfolio.tsx  DatePicker.tsx  (+10 more)
supabase/: BACKUP.md  day_templates.sql  migration-ai-usage-limit.sql  migration-categories-archive-charity.sql  migration-charity-pot.sql  migration-crypto-contract.sql  migration-cushion-months.sql  migration-debts.sql  migration-goals-sort.sql  migration-planner-day-overrides-freeze.sql  migration-planner-important.sql  migration-pomo-sound.sql  migration-primary-goal.sql  migration-releases-bucket.sql  migration-water-presets.sql  push_tokens.sql  repair-planner-freeze-past-titles.sql  schema.sql
(+65 files in other folders)
